--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 </div>
                 <ul>
                     <li class="p-4 border-b border-black menu-item"><a href="#">Beranda</a></li>
-                    <li class="p-4 border-b border-black menu-item"><a href="#">Kebudayaan</a></li>
-                    <li class="p-4 border-b border-black menu-item"><a href="#">Galeri</a></li>
-                    <li class="p-4 border-b border-black menu-item"><a href="#">Tentang Kami</a></li>
+                    <li class="p-4 border-b border-black menu-item"><a href="#Budaya">Kebudayaan</a></li>
+                    <li class="p-4 border-b border-black menu-item"><a href="#Galeri">Galeri</a></li>
+                    <li class="p-4 border-b border-black menu-item"><a href="#footer">Tentang Kami</a></li>
                 </ul>
             </div>
         </div>
