--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <ul>
                     <li class="p-4 border-b border-black menu-item"><a href="#">Beranda</a></li>
-                    <li class="p-4 border-b border-black menu-item"><a href="#Budaya">Kebudayaan</a></li>
+                    <li class="p-4 border-b border-black menu-item"><a href="#budaya">Kebudayaan</a></li>
                     <li class="p-4 border-b border-black menu-item"><a href="#Galeri">Galeri</a></li>
                     <li class="p-4 border-b border-black menu-item"><a href="#footer">Tentang Kami</a></li>
                 </ul>
